# escape

./: Makefile  README_UPDATED.md  SUBJECT.md  docker-compose.yaml
scripts/: get-me.sh
services/administration-service/: Dockerfile
services/administration-service/prisma/: schema.prisma
services/administration-service/src/: server.ts
services/administration-service/src/lib/: tasks.ts  users.ts
services/administration-service/src/routes/: tasks.ts
services/tasks-service/: Dockerfile  pyproject.toml  requirements.txt  start.sh
services/tasks-service/tasks/: kafka.py  logger.py  main.py  runner.py  task_runner.py
